Improve chat UX, tooling reliability, and documentation consistency